// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Marketplace desktop 1`] = `
<div
  className="container"
>
  <main>
    <AppToolbar
      accountsState={
        Object {
          "connectToProvider": [Function],
          "mainchain_account": null,
          "provider_installed": false,
        }
      }
      deviceType="desktop"
      section="marketplace"
    />
    <p>
      Marketplace
    </p>
  </main>
</div>
`;

exports[`Renders Marketplace mobile 1`] = `
<div
  className="container"
>
  <main>
    <AppToolbar
      accountsState={
        Object {
          "connectToProvider": [Function],
          "mainchain_account": null,
          "provider_installed": false,
        }
      }
      deviceType="mobile"
      section="marketplace"
    />
    <p>
      Marketplace
    </p>
  </main>
</div>
`;
